@@ -6,9 +6,17 @@ lazy val root = (project in file("."))
     version := "0.1.0-SNAPSHOT",
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-sql" % "3.5.1",
+      "org.apache.spark" %% "spark-mllib" % "3.5.1",
       "org.scalameta" %% "munit" % "1.0.0" % Test
     ),
     Compile / mainClass := Some("FullPipeline"),
     Compile / run / fork := true,
-    Compile / run / javaOptions ++= Seq("--add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
+    Compile / run / javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+    )
   )
